# QChess

./: CMakeLists.txt  README.md  default_board.txt  dialog.cpp  dialog.h  dialog.ui  game.cpp  game.h  gamewindow.cpp  gamewindow.h  gamewindow.ui  history.cpp  history.h  history.ui  img.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  wood.qrc
board/: BoardUtils.h  board.cpp  board.h
matrix/: matr_impl.h  matrix.h
other/: Color_opposite.h  CoordinateShift.h  color.h  position.h
pieces/: chesspiece.h  pieces.h
player/: player.cpp  player.h
